compiler/parser/src/snapshots/rustpython_parser__string__tests__escape_alias.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..12,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..12,
                custom: (),
                node: Constant {
                    value: Str(
                        "\u{1b}",
                    ),
                    kind: None,
                },
            },
        },
    },
]
