compiler/parser/src/snapshots/rustpython_parser__string__tests__escape_char_in_byte_literal.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..13,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..13,
                custom: (),
                node: Constant {
                    value: Bytes(
                        [
                            111,
                            109,
                            107,
                            109,
                            111,
                            107,
                            92,
                            88,
                            97,
                            97,
                        ],
                    ),
                    kind: None,
                },
            },
        },
    },
]
