compiler/parser/src/snapshots/rustpython_parser__string__tests__escape_octet.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..14,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..14,
                custom: (),
                node: Constant {
                    value: Bytes(
                        [
                            35,
                            97,
                            4,
                            83,
                            52,
                        ],
                    ),
                    kind: None,
                },
            },
        },
    },
]
