compiler/parser/src/snapshots/rustpython_parser__string__tests__form_feed_alias.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..15,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..15,
                custom: (),
                node: Constant {
                    value: Str(
                        "\u{c}",
                    ),
                    kind: None,
                },
            },
        },
    },
]
