compiler/parser/src/snapshots/rustpython_parser__string__tests__fstring_escaped_newline.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..8,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..8,
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            range: 0..8,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "\n",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 0..8,
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    range: 5..6,
                                    custom: (),
                                    node: Name {
                                        id: "x",
                                        ctx: Load,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
